dodano html kodiranje protiv xss

--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -3,55 +3,55 @@
 <div class="alert alert-danger"><%= messages.error %></div>
 <% } %>
 <% if (messages.info) { %></div>
-<div class="info alert-info"><%= messages.info %>
-    <% } %>
-    <form action="add" method="POST">
-        <div>
-            <label for="ime">Ime</label>
-            <input type="text" id="ime" name="ime" required />
-        </div>
+<div class="info alert-info"><%= messages.info %></div>
+<% } %>
+<form action="add" method="POST">
+    <div>
+        <label for="ime">Ime</label>
+        <input type="text" id="ime" name="ime" required />
+    </div>
 
-        <div>
-            <label for="prezime">Prezime</label>
-            <input type="text" id="prezime" name="prezime" required />
-        </div>
+    <div>
+        <label for="prezime">Prezime</label>
+        <input type="text" id="prezime" name="prezime" required />
+    </div>
 
-        <div>
-            <label for="telefon">Telefon</label>
-            <input type="text" id="telefon" name="telefon" required />
-        </div>
+    <div>
+        <label for="telefon">Telefon</label>
+        <input type="text" id="telefon" name="telefon" required />
+    </div>
 
-        <div>
-            <label for="datum_zaposljavanja">Datum zaposljavanja</label>
-            <input type="date" id="telefon" name="datum_zaposljavanja" required />
-        </div>
+    <div>
+        <label for="datum_zaposljavanja">Datum zaposljavanja</label>
+        <input type="date" id="telefon" name="datum_zaposljavanja" required />
+    </div>
 
-        <div>
-            <label for="jmbg">JMBG</label>
-            <input type="text" id="jmbg" name="jmbg" required />
-        </div>
+    <div>
+        <label for="jmbg">JMBG</label>
+        <input type="text" id="jmbg" name="jmbg" required />
+    </div>
 
-        <div>
-            <label for="lokacija">Lokacija</label>
-            <input type="text" id="lokacija" name="lokacija" required />
-        </div>
+    <div>
+        <label for="lokacija">Lokacija</label>
+        <input type="text" id="lokacija" name="lokacija" required />
+    </div>
 
-        <div>
-            <label>pravo_pristupa: </label>
-            <label for="pravo_pristupa">ADMIN</label>
-            <input type="radio" name="pravo_pristupa" value="1" required />
-            <label for="pravo_pristupa">UPOSLENIK</label>
-            <input type="radio" name="pravo_pristupa" value="2" required />
-        </div>
+    <div>
+        <label>pravo_pristupa: </label>
+        <label for="pravo_pristupa">ADMIN</label>
+        <input type="radio" name="pravo_pristupa" value="1" required />
+        <label for="pravo_pristupa">UPOSLENIK</label>
+        <input type="radio" name="pravo_pristupa" value="2" required />
+    </div>
 
-        <div>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
-        </div>
+    <div>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
+    </div>
 
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required />
-        </div>
-        <button class="btn btn-success ml-2" type="submit">Registruj osobu</button>
-    </form>
+    <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required />
+    </div>
+    <button class="btn btn-success ml-2" type="submit">Registruj osobu</button>
+</form>
